hw/xwayland/xwayland-window.c
@@ -795,6 +795,8 @@ xdg_toplevel_handle_configure(void *data,
 {
     struct xwl_window *xwl_window = data;
     struct xwl_screen *xwl_screen = xwl_window->xwl_screen;
+    uint32_t *p;
+    Bool old_active = xwl_screen->active;
 
     /* Maintain our current size if no dimensions are requested */
     if (width == 0 && height == 0)
@@ -803,6 +805,20 @@ xdg_toplevel_handle_configure(void *data,
     if (!xwl_screen->fullscreen) {
         /* This will be committed by the xdg_surface.configure handler */
         xwl_window_maybe_resize(xwl_window, width, height);
+    }
+
+    xwl_screen->active = FALSE;
+    wl_array_for_each (p, states) {
+        uint32_t state = *p;
+        if (state == XDG_TOPLEVEL_STATE_ACTIVATED) {
+            xwl_screen->active = TRUE;
+            break;
+        }
+    }
+
+    if (old_active != xwl_screen->active) {
+        if (!xwl_screen->active)
+            xwl_screen_lost_focus(xwl_screen);
     }
 }
 
